--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 header{
-    font-family:"Verdana" sans-serif;
     border-radius: 0.5em;
     background-color: rgb(82, 142, 253);
+    display: inline;
+}
+
+h1{
+    font-family:"Verdana" sans-serif;
     color: beige;
-    
+    font-size: 3em;
+    padding: 0.25em;
 }
