--- a/style.css
+++ b/style.css
@@ -1,12 +1,63 @@
 header{
     border-radius: 0.5em;
-    background-color: rgb(82, 142, 253);
-    display: inline;
+    background-color: rgb(0, 61, 165);
+    display: inline-flex;
+    width: 100%;
+    margin-bottom: 1em;  
 }
 
 h1{
-    font-family:"Verdana" sans-serif;
+    font-family: 'Verdana',sans-serif;
+}
+
+h2{
+    font-family: 'Verdana',sans-serif; 
+}
+
+header h1{
+    
     color: beige;
-    font-size: 3em;
-    padding: 0.25em;
+    font-size: 3.5em;
+    padding: 0.05em;
+}
+
+header img{
+    max-height: 7.5em;
+    max-width: 5.5em;
+    height: auto;
+    width: auto;
+    margin: 0.75em;
+    margin-left: 1.5em;
+    margin-right: 1.75em;
+    vertical-align: middle;  
+}
+
+nav{
+    background-color: rgb(0, 102, 255);
+    padding: 0.02em;
+    border-radius: 0.5em;
+}
+
+nav ul{
+    list-style-type: none;
+    font-family: 'Verdana',sans-serif;
+    font-size: 1.25em;
+    font-weight: bold;
+    display: inline-flex;
+}
+
+nav ul a{
+    float: left;
+    color: black;
+    text-decoration: none;
+    padding:0.02em; 
+    padding-right: 1em;
+}
+
+a.seleccion{
+    color: beige;
+}
+
+section{
+    margin: 0.75em;
 }
