--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 header{
     border-radius: 0.5em;
-    background-color: rgb(0, 61, 165);
+    background-image:linear-gradient(to right, rgb(0, 61, 165), rgb(0, 146, 165));
     display: inline-flex;
     width: 100%;
     margin-bottom: 1em;  
@@ -33,7 +33,7 @@ header img{
 }
 
 nav{
-    background-color: rgb(0, 102, 255);
+    background-image:linear-gradient(to right, rgb(0, 102, 255), rgb(28, 163, 163));
     padding: 0.02em;
     border-radius: 0.5em;
 }
