--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ nav{
     padding: 0.02em;
     border-radius: 0.5em;
     width: 100%;
+    overflow: hidden;
 }
 
 nav ul{
@@ -103,22 +104,25 @@ footer img{
 div{
     margin: auto;
     position: float;
+    overflow: hidden;
 }
 
 .slideshow { 
-    position: absolute;
-    text-align: center;
-    margin:auto;
-    padding: 1% 5%;   
+    position: relative;
+    text-align: center;   
 }
 
 .slideshow img{
-    position: absolute;
+    position: relative;
     display: block;
+    margin-top: 1em;
+    margin-top: 1em;
     margin-left: auto;
     margin-right: auto;
-    width:auto;
+    width:90em;
+    max-width: 90em;
     height: 20em;
+    max-height: 20em;
     left: 0;
     top: 0;
 }
