--- a/style.css
+++ b/style.css
@@ -181,9 +181,11 @@ th{
 .meteo p{
     text-align: center;
     margin: auto;
+    width: 40%;
 }
 
 .meteo img{
     float: left;
     margin: auto;
+    width: 40%;
 }
