--- a/style.css
+++ b/style.css
@@ -186,3 +186,11 @@ th{
     margin-left: 40%;
     vertical-align: middle;
 }
+
+svg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 20em;
+  min-width: 15em;
+}
