--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ a.seleccion{
 
 section{
     margin: 0.75em;
+    overflow: hidden;
 }
 
 section p {
@@ -187,10 +188,9 @@ th{
     vertical-align: middle;
 }
 
-svg {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-height: 20em;
-  min-width: 15em;
+svg{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    overflow-x: hidden;
 }
