--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ section{
     overflow: hidden;
 }
 
-section p {
+section p{
     font-family: 'Verdana',sans-serif;
     font-size: 1em;
     text-align: justify;
@@ -194,4 +194,11 @@ svg{
     display: block;
     overflow-x: hidden;
     font-weight: bolder;
+}
+
+section li{
+    font-family: 'Verdana',sans-serif;
+    font-size: 1em;
+    text-align: justify;
+    display: inline;
 }
