--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ section{
     overflow: hidden;
 }
 
-section p{
+section p, p{
     font-family: 'Verdana',sans-serif;
     font-size: 1em;
     text-align: justify;
@@ -92,6 +92,7 @@ section img {
     max-width: 40em;
     height: auto;
     border-radius: 0.75em;
+    padding:0.2em;
 }
 
 blockquote{
@@ -214,9 +215,19 @@ svg{
     font-weight: bolder;
 }
 
-section li{
+.lateral{
     font-family: 'Verdana',sans-serif;
     font-size: 1em;
     text-align: justify;
     display: inline;
+}
+
+li{
+    font-family: 'Verdana',sans-serif;
+    font-size: 1em;
+    text-align: justify;  
+}
+
+footer p{
+    text-align: center;
 }
