--- a/style.css
+++ b/style.css
@@ -235,4 +235,11 @@ footer p{
 #mapa {
     height: 500px;
     width: 100%;
+    margin-top:2em;
+    margin-bottom:2em;
+    overflow: hidden;
+}
+
+#mapa *{
+    overflow: visible;
 }
