--- a/style.css
+++ b/style.css
@@ -243,3 +243,20 @@ footer p{
 #mapa *{
     overflow: visible;
 }
+
+section ul img{
+    position: relative;
+    display: block;
+    margin-top: 1em;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    width:70em;
+    max-width: 70em;
+    height: 30em;
+    max-height: 30em;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+    border-radius: 2em;
+}
