--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ nav{
     border-radius: 0.5em;
     width: 100%;
     overflow: hidden;
+    position: relative;
+    float: left;
 }
 
 nav ul{
@@ -52,8 +54,11 @@ nav ul{
     font-family: 'Verdana',sans-serif;
     font-size: 1.45em;
     font-weight: bold;
-    display: inline-flexbox;
-    overflow: auto;
+}
+
+nav li {
+    display: inline-block;
+    vertical-align: top;
 }
 
 nav ul a{
