--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ nav{
     width: 100%;
     overflow: hidden;
     position: relative;
-    float: left;
     margin-bottom: 1em;
+    clear: both;
 }
 
 nav ul{
