--- a/style.css
+++ b/style.css
@@ -208,8 +208,12 @@ th{
 }
 
 .meteo img{
-    margin-left: 45.5%;
-    vertical-align: middle;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    max-width: 10em;
+    max-height: 10em;
 }
 
 svg{
