--- a/style.css
+++ b/style.css
@@ -93,9 +93,10 @@ section p, p{
 }
 
 section img {
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    display: block;
+    width: 50%;
     max-width: 40em;
     height: auto;
     border-radius: 0.75em;
@@ -218,7 +219,7 @@ svg{
     margin-left: auto;
     margin-right: auto;
     display: block;
-    overflow-x: hidden;
+    overflow-x: visible;
     font-weight: bolder;
 }
 
