--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* 0 0 1 */
 header{
     border-radius: 0.5em;
     background-image:linear-gradient(to right, rgb(0, 61, 165), rgb(0, 146, 165));
@@ -5,29 +6,29 @@ header{
     width: 100%;
     margin-bottom: 1em;  
 }
-
+/* 0 0 1 */
 h1{
     font-family: 'Verdana',sans-serif;
     font-weight: bold;
 }
-
+/* 0 0 1 */
 h2{
     font-family: 'Verdana',sans-serif;
     font-style: italic; 
 }
-
+/* 0 0 1 */
 h3{
     font-family: 'Verdana',sans-serif; 
     font-style: italic;
 }
-
+/* 0 0 2 */
 header h1{
     
     color: beige;
     font-size: 3.5em;
     padding: 0.05em;
 }
-
+/* 0 0 2 */
 header img{
     max-height: 7.5em;
     max-width: 5.5em;
@@ -38,7 +39,7 @@ header img{
     margin-right: 1.75em;
     vertical-align: middle;  
 }
-
+/* 0 0 1 */
 nav{
     background-image:linear-gradient(to right, rgb(0, 102, 255), rgb(28, 163, 163));
     padding: 0.02em;
@@ -49,19 +50,19 @@ nav{
     margin-bottom: 1em;
     clear: both;
 }
-
+/* 0 0 2 */
 nav ul{
     list-style-type: none;
     font-family: 'Verdana',sans-serif;
     font-size: 1.45em;
     font-weight: bold;
 }
-
+/* 0 0 2 */
 nav li {
     display: inline-block;
     vertical-align: top;
 }
-
+/* 0 0 3 */
 nav ul a{
     float: left;
     color:  #ffa500;
@@ -69,22 +70,22 @@ nav ul a{
     padding:0.25em; 
     padding-right: 1em;
 }
-
+/* 0 1 1 */
 a.seleccion{
     color: beige;
 }
-
+/* 0 0 1 */
 section{
     margin: 0.75em;
     overflow: hidden;
 }
-
+/* 0 0 2 *//* 0 0 1 */
 section p, p{
     font-family: 'Verdana',sans-serif;
     font-size: 1em;
     text-align: justify;
 }
-
+/* 0 1 0 */
 .logo {
     float: left;
     clear: both;
@@ -92,7 +93,7 @@ section p, p{
     max-width: 7em;
     margin: 1em;
 }
-
+/* 0 0 2 */
 section img {
     display: block;
     margin-left: auto;
@@ -103,14 +104,14 @@ section img {
     border-radius: 0.75em;
     padding:0.2em;
 }
-
+/* 0 0 2 */
 blockquote{
     text-align: center;
     font-size: 1em;
     font-style: oblique;
     font-weight: bolder;
 }
-
+/* 0 0 1 */
 footer{
     display: flex;
     align-items: center;
@@ -121,11 +122,11 @@ footer{
     background-image:linear-gradient(to right, rgb(0, 61, 165), rgb(0, 146, 165));
     width: 100%;
 }
-
+/* 0 0 2 */
 footer p{
     margin-left: 35%;
 }
-
+/* 0 0 2 */
 footer img{
     max-height: 1.5em;
     max-width: 1.5em;
@@ -134,18 +135,18 @@ footer img{
     padding: 0.8em;
     margin-right: 35%;
 }
-
+/* 0 0 1 */
 div{
     margin: auto;
     overflow: hidden;
 }
-
+/* 0 1 0 */
 .slideshow { 
     position: relative;
     text-align: center;
     overflow: hidden;   
 }
-
+/* 0 1 1 */
 .slideshow img{
     display: block;
     margin-left: auto;
@@ -159,7 +160,7 @@ div{
     overflow: hidden;
     border-radius: 2em;
 }
-
+/* 0 0 1 *//* 0 0 1 */
 th, td {
     border-bottom: 1px solid rgb(0, 61, 165);
     font-family: 'Verdana',sans-serif;
@@ -167,24 +168,24 @@ th, td {
     padding: 0.4em;
     font-size: 1.17em;
 }
-
+/* 0 0 1 */
 table{
     text-align: center;
     margin-left:auto; 
     margin-right:auto;
 }
-
+/* 0 0 1 */
 th{
     font-weight: bolder;
 }
-
+/* 0 1 0 */
 .bolas {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0.4em;
 }
-
+/* 0 1 0 */
 .bola {
     margin: 0.3em;
     width: 0.8em;
@@ -192,21 +193,21 @@ th{
     border-radius: 100%;
     background: gray;
 }
-
+/* 0 2 0 */
 .bola:hover {
     background: rgb(26, 25, 25);
     transition: 0.3s;
 }
-
+/* 0 1 0 */
 .activo {
     background: rgb(0, 102, 255);
 }
-
+/* 0 1 1 */
 .meteo p{
     clear: both;
     text-align: center;
 }
-
+/* 0 1 1 */
 .meteo img{
     display: block;
     margin-left: auto;
@@ -215,30 +216,30 @@ th{
     max-width: 10em;
     max-height: 10em;
 }
-
+/* 0 0 1 */
 svg{
     margin-left: auto;
     margin-right: auto;
     display: block;
 }
-
+/* 0 1 0 */
 .lateral{
     font-family: 'Verdana',sans-serif;
     font-size: 1em;
     text-align: justify;
     display: inline;
 }
-
+/* 0 0 1 */
 li{
     font-family: 'Verdana',sans-serif;
     font-size: 1em;
     text-align: justify;  
 }
-
+/* 0 0 2 */
 footer p{
     text-align: center;
 }
-
+/* 1 0 0 */
 #mapa {
     height: 500px;
     width: 100%;
@@ -246,11 +247,11 @@ footer p{
     margin-bottom:2em;
     overflow: hidden;
 }
-
+/* 1 0 0 */
 #mapa *{
     overflow: visible;
 }
-
+/* 0 0 3 */
 section div img{
     display: block;
     margin-left: auto;
@@ -267,7 +268,7 @@ section div img{
     overflow: hidden;
     border-radius: 2em;
 }
-
+/* 0 0 1 */
 video{
     display: block;
     margin-left: auto;
@@ -281,23 +282,23 @@ video{
     height:auto;
     overflow: hidden;
 }
-
+/* 0 1 0 */
 .local{
     background-color: #6ea6ff5d;
     margin-left: 30%;
     margin-right: 30%;
     border-radius: 2em;
 }
-
+/* 0 1 1 */
 .local p {
     text-align: center;
 }
-
+/* 0 1 0 *//* 0 1 0 */
 .latitud, .longitud{
     list-style-type: none;
     text-align: center;
 }
-
+/* 0 0 1 */
 hr { 
     display: block;
     overflow: hidden;
@@ -305,34 +306,34 @@ hr {
     margin-left: 3%;
     margin-right: 3%;
 }
-
+/* 0 0 2 */
 section div {
     margin-top:1em;
     margin-bottom: 1em;
     overflow-x: auto;
 }
-
+/* 0 1 0 */
 .comentario{
     background-color: #6ea6ff5d;
     border-radius: 2em;
 }
-
+/* 0 1 1 *//* 0 1 1 */
 .comentario h3, .comentario p {
     margin:1em;
 }
-
+/* 1 0 0 */
 #formulario {
     background-color: lightseagreen;
     border-radius: 2em;
 }
-
+/* 1 0 1 */
 #formulario form{
     margin:1em;
     font-family: 'Verdana',sans-serif;
     font-size: 1em;
     text-align: justify;
 }
-
+/* 1 0 0 */
 #comentar{
     background-color:blue;
     border: none;
@@ -346,7 +347,7 @@ section div {
     width:7em;
     border-radius: 0.5em;
 }
-
+/* 0 0 1 *//* 1 0 1 */
 input, #formulario textarea{
     margin:1em;
     margin-top: 0.5em;
@@ -355,13 +356,13 @@ input, #formulario textarea{
     font-size: 1em;
     text-align: justify;
 }
-
+/* 1 0 0 */
 #iplargo{
     width:90%;
     height:auto;
 }
-
-#ipcorto{
+/* 0 1 0 */
+.ipcorto{
     width:30%;
     height:auto;
 }
